deleted target folder, changed Paths.get() to Path.of() in source file